REGRESSION(r195447): [GTK] document.activeElement not set on mouse click https://bugs.webkit.org/show_bug.cgi?id=236217

Reviewed by Michael Catanzaro.

Source/WebCore:

Bring back the behavior before r195447 and focus the links on click which is consistent with other browser in
Linux and ensures active element is the expected one on a click event listener.

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::isMouseFocusable const):

LayoutTests:

* fast/events/click-focus-anchor-expected.txt:
* fast/events/click-focus-anchor.html:
* platform/glib/TestExpectations: Mark imported/blink/fast/events/click-focus-keydown-no-ring.html as failure.
* platform/glib/fast/events/click-focus-anchor-expected.txt: Copied from LayoutTests/fast/events/click-focus-anchor-expected.txt.


Canonical link: https://commits.webkit.org/247257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289792 268f45cc-cd09-0410-ab3c-d52691b4dbfc