Source/WebCore/html/HTMLAnchorElement.cpp
@@ -102,9 +102,11 @@ bool HTMLAnchorElement::supportsFocus() const
 
 bool HTMLAnchorElement::isMouseFocusable() const
 {
+#if !(PLATFORM(GTK) || PLATFORM(WPE))
     // Only allow links with tabIndex or contentEditable to be mouse focusable.
     if (isLink())
         return HTMLElement::supportsFocus();
+#endif
 
     return HTMLElement::isMouseFocusable();
 }
